--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database= Mini_Order_Management;User Id=sa;Password= 12345;TrustServerCertificate=True;"
+  }
 }
